fix: use 100% to avoid horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,11 @@
   margin: 0 0;
   padding: 0;
   text-align: center;
+  width: 100%;
 }
 
 .nav {
-  width: 100vw;
+  width: 100%;
 }
 
 #main {
